# PlayPG

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Client.cmake  LICENSE  README.md  Server.cmake  db.sql  makogen.py  py3setup.md
ODB/: Character.hpp  Location.hpp  Player.hpp  Race.hpp
assets/: outdoor.tmx  room1.tmx
client/: ClientMapUtil.cpp  PlayPG.cpp  main.cpp
client-include/: ClientMapUtil.hpp  Components.hpp  PlayPG.hpp  Systems.hpp
client-include/components/: FocalPoint.hpp  KeyboardInputListener.hpp  NetworkInputListener.hpp  Position.hpp
client-include/systems/: CameraFocusSystem.hpp  InputSystem.hpp  NetworkDispatchSystem.hpp
client/systems/: CameraFocusSystem.cpp  InputSystem.cpp  MovementSystem.cpp  RenderSystem.cpp
cmake/: FindAPG.cmake  FindODB.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindTmxParser.cmake  UseODB.cmake
include/: Map.hpp  PlayPG.hpp  PlayPGODB.hpp  Systems.hpp
include/components/: Position.hpp  Renderable.hpp  TiledLayerRenderable.hpp  TiledRenderable.hpp
include/data/: Character.hpp  Stats.hpp
include/net/: Crypto.hpp  InputPacket.hpp  Opcodes.hpp  Packet.hpp  PacketFactory.hpp  PlayerSession.hpp  WorldSession.hpp
include/net/crypto/: CryptoCommon.hpp  RSACrypto.hpp  SHACrypto.hpp
include/net/packets/: CharacterPackets.hpp  ErrorPackets.hpp  GameplayPackets.hpp  LoginPackets.hpp
include/server/: LoginServer.hpp  MapServer.hpp  ServerCommon.hpp
include/systems/: CameraFocusSystem.hpp  InputSystem.hpp  MovementSystem.hpp  NetworkDispatchSystem.hpp  RenderSystem.hpp
include/util/: Util.hpp
server/: LoginServer.cpp  LoginServerConnectedHandler.cpp  LoginServerIncomingHandler.cpp  MapServer.cpp  ServerCommon.cpp  servermain.cpp
server-include/: LoginServer.hpp  MapServer.hpp  ServerCommon.hpp
src/: Map.cpp  PlayPG.cpp  PlayPGVersion.cpp  main.cpp
src/components/: Renderable.cpp
src/data/: Character.cpp
src/net/: Crypto.cpp  PacketFactory.cpp  PlayerSession.cpp
src/net/crypto/: CryptoCommon.cpp  RSACrypto.cpp  SHACrypto.cpp
src/net/packets/: CharacterPacket.cpp  LoginPackets.cpp
src/odb/: Location.cpp
src/server/: LoginServer.cpp  MapServer.cpp  ServerCommon.cpp
src/systems/: CameraFocusSystem.cpp  InputSystem.cpp  MovementSystem.cpp  NetworkDispatchSystem.cpp  RenderSystem.cpp
src/util/: Util.cpp
